--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,207 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <data>
-
-        <variable
-            name="presenter"
-            type="laurcode.com.retire.main.presenter.MainPresenter" />
-
-        <variable
-            name="viewModel"
-            type="laurcode.com.retire.main.viewmodel.MainViewModel" />
-
-    </data>
-
-    <RelativeLayout
+    <TextView
+        android:id="@+id/inputs_heading"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="@string/input_heading"
+        style="@style/TextStyle.Cabin.Title"
+        android:layout_marginTop="@dimen/margin_huge"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger" />
 
-        <TextView
-            android:id="@+id/inputs_heading"
+    <TextView
+        android:id="@+id/long_click_input_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:layout_below="@id/inputs_heading"
+        android:text="@string/input_form_long_click_hint"
+        style="@style/TextStyle.Cabin.Caption.Big"
+        android:layout_marginTop="@dimen/margin_huge"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger"
+        android:layout_marginBottom="@dimen/margin_huge" />
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/current_funds_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/long_click_input_hint"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger"
+        app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
+        android:textColorHint="@color/grey_600"
+        android:longClickable="true">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/current_funds_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="@string/input_heading"
-            style="@style/TextStyle.Cabin.Title"
-            android:layout_marginTop="@dimen/margin_huge"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            />
+            android:inputType="numberDecimal"
+            style="@style/TextStyle.Cabin.Body.Regular"
+            android:hint="@string/current_funds_heading"/>
 
-        <TextView
-            android:id="@+id/long_click_input_hint"
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/monthly_contributions_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger"
+        android:layout_below="@id/current_funds_layout"
+        app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
+        android:textColorHint="@color/grey_600"
+        android:longClickable="true">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/monthly_contributions_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:layout_below="@id/inputs_heading"
-            android:text="@string/input_form_long_click_hint"
-            style="@style/TextStyle.Cabin.Caption.Big"
-            android:layout_marginTop="@dimen/margin_huge"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            android:layout_marginBottom="@dimen/margin_huge"
-            />
+            android:inputType="numberDecimal"
+            style="@style/TextStyle.Cabin.Body.Regular"
+            android:hint="@string/monthly_contributions_heading"/>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/current_funds_layout"
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/increases_in_contributions_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger"
+        android:layout_below="@id/monthly_contributions_layout"
+        app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
+        android:textColorHint="@color/grey_600"
+        android:longClickable="true">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/increases_in_contributions_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/long_click_input_hint"
-            android:layout_marginTop="@dimen/margin_small"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
-            android:textColorHint="@color/grey_600"
-            android:longClickable="true">
+            android:inputType="numberDecimal"
+            style="@style/TextStyle.Cabin.Body.Regular"
+            android:hint="@string/increases_in_contributions_heading"/>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/current_funds_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                style="@style/TextStyle.Cabin.Body.Regular"
-                android:hint="@string/current_funds_heading"/>
+    </android.support.design.widget.TextInputLayout>
 
-        </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/investment_return_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger"
+        android:layout_below="@id/increases_in_contributions_layout"
+        app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
+        android:textColorHint="@color/grey_600"
+        android:longClickable="true">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/monthly_contributions_layout"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/investment_return_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            android:layout_below="@id/current_funds_layout"
-            app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
-            android:textColorHint="@color/grey_600"
-            android:longClickable="true">
+            android:inputType="numberDecimal"
+            style="@style/TextStyle.Cabin.Body.Regular"
+            android:hint="@string/investment_return_heading"/>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/monthly_contributions_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                style="@style/TextStyle.Cabin.Body.Regular"
-                android:hint="@string/monthly_contributions_heading"/>
+    </android.support.design.widget.TextInputLayout>
 
-        </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/inflation_rate_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger"
+        android:layout_below="@id/investment_return_layout"
+        app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
+        android:textColorHint="@color/grey_600"
+        android:longClickable="true">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/increases_in_contributions_layout"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/inflation_rate_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            android:layout_below="@id/monthly_contributions_layout"
-            app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
-            android:textColorHint="@color/grey_600"
-            android:longClickable="true">
+            android:inputType="numberDecimal"
+            style="@style/TextStyle.Cabin.Body.Regular"
+            android:hint="@string/inflation_rate_heading"/>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/increases_in_contributions_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                style="@style/TextStyle.Cabin.Body.Regular"
-                android:hint="@string/increases_in_contributions_heading"/>
+    </android.support.design.widget.TextInputLayout>
 
-        </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/term_to_retirement_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger"
+        android:layout_below="@id/inflation_rate_layout"
+        app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
+        android:textColorHint="@color/grey_600"
+        android:longClickable="true">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/investment_return_layout"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/term_to_retirement_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            android:layout_below="@id/increases_in_contributions_layout"
-            app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
-            android:textColorHint="@color/grey_600"
-            android:longClickable="true">
+            android:inputType="numberDecimal"
+            style="@style/TextStyle.Cabin.Body.Regular"
+            android:hint="@string/term_to_retirement_heading"/>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/investment_return_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                style="@style/TextStyle.Cabin.Body.Regular"
-                android:hint="@string/investment_return_heading"/>
+    </android.support.design.widget.TextInputLayout>
 
-        </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/term_after_retirement_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_huger"
+        android:layout_marginRight="@dimen/margin_huger"
+        android:layout_below="@id/term_to_retirement_layout"
+        app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
+        android:textColorHint="@color/grey_600"
+        android:longClickable="true">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/inflation_rate_layout"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/term_after_retirement_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            android:layout_below="@id/investment_return_layout"
-            app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
-            android:textColorHint="@color/grey_600"
-            android:longClickable="true">
+            android:inputType="numberDecimal"
+            style="@style/TextStyle.Cabin.Body.Regular"
+            android:hint="@string/term_after_retirement_heading"/>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/inflation_rate_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                style="@style/TextStyle.Cabin.Body.Regular"
-                android:hint="@string/inflation_rate_heading"/>
+    </android.support.design.widget.TextInputLayout>
 
-        </android.support.design.widget.TextInputLayout>
+    <!-- TODO add 2 output fields (present value of accumulation at retirement, and max sustainable monthly income -->
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/term_to_retirement_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            android:layout_below="@id/inflation_rate_layout"
-            app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
-            android:textColorHint="@color/grey_600"
-            android:longClickable="true">
+    <!-- TODO add add input field for monthly income required after retirement -->
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/term_to_retirement_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                style="@style/TextStyle.Cabin.Body.Regular"
-                android:hint="@string/term_to_retirement_heading"/>
+    <!-- TODO add output field for remaining balance of capital after N + n years -->
 
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/term_after_retirement_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_huger"
-            android:layout_marginRight="@dimen/margin_huger"
-            android:layout_below="@id/term_to_retirement_layout"
-            app:hintTextAppearance="@style/TextStyle.Cabin.Body.Regular"
-            android:textColorHint="@color/grey_600"
-            android:longClickable="true">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/term_after_retirement_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                style="@style/TextStyle.Cabin.Body.Regular"
-                android:hint="@string/term_after_retirement_heading"/>
-
-        </android.support.design.widget.TextInputLayout>
-
-        <!-- TODO add 2 output fields (present value of accumulation at retirement, and max sustainable monthly income -->
-
-        <!-- TODO add add input field for monthly income required after retirement -->
-
-        <!-- TODO add output field for remaining balance of capital after N + n years -->
-
-    </RelativeLayout>
-
-</layout>
+</RelativeLayout>
