--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,69 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/retire_splash_background">
 
-    <data>
-
-        <variable
-            name="viewModel"
-            type="laurcode.com.retire.startup.viewmodel.SplashViewModel" />
-
-    </data>
-
-    <RelativeLayout
-        android:id="@+id/root_container"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/retire_splash_background">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:paddingBottom="@dimen/padding_ginormous">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/retire_heading"
+            style="@style/TextStyle.IndieFlower.Display2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerInParent="true"
-            android:paddingBottom="@dimen/padding_ginormous">
-
-            <TextView
-                android:id="@+id/retire_heading"
-                style="@style/TextStyle.IndieFlower.Display2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/app_name"
-                android:textColor="@color/black"
-                android:visibility="gone"
-                tools:visibility="visible" />
-
-            <com.hanks.htextview.typer.TyperTextView
-                android:id="@+id/retire_caption"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                tools:text="@string/splash_caption"
-                android:layout_marginBottom="@dimen/margin_ginormouser"
-                android:textColor="@color/dark_slate_blue"
-                app:charIncrease="1"
-                app:typerSpeed="70"
-                style="@style/TextStyle.Cabin.Caption.Big"/>
-
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/continue_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:bounceOnTouch="@{true}"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="@color/black"
             android:visibility="gone"
-            tools:visibility="visible"
-            android:layout_marginLeft="@dimen/margin_gicantic"
-            android:layout_marginRight="@dimen/margin_gicantic"
-            android:layout_marginBottom="@dimen/margin_ginormous"
-            android:text="@string/splash_button_text"
-            style="@style/MagentaButtonStyle"/>
+            tools:visibility="visible" />
 
-    </RelativeLayout>
+        <com.hanks.htextview.typer.TyperTextView
+            android:id="@+id/retire_caption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            tools:text="@string/splash_caption"
+            android:layout_marginBottom="@dimen/margin_ginormouser"
+            android:textColor="@color/dark_slate_blue"
+            app:charIncrease="1"
+            app:typerSpeed="70"
+            style="@style/TextStyle.Cabin.Caption.Big"/>
 
-</layout>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/continue_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_marginLeft="@dimen/margin_gicantic"
+        android:layout_marginRight="@dimen/margin_gicantic"
+        android:layout_marginBottom="@dimen/margin_ginormous"
+        android:text="@string/splash_button_text"
+        style="@style/MagentaButtonStyle"/>
+
+</RelativeLayout>
